--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/platform-express": "^11.0.9",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^5.1.1",
     "carteira-api": "file:",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
