--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/platform-express": "^11.0.9",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^5.1.1",
     "carteira-api": "file:",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "pg": "^8.13.3",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
